[package]
name = "rustun"
version = "0.5.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A library for implementing STUN server and client asynchronously"
homepage = "https://github.com/sile/rustun"
repository = "https://github.com/sile/rustun"
readme = "README.md"
keywords = ["STUN", "asynchronous"]
categories = ["asynchronous", "network-programming"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/rustun"}

[dependencies]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
fibers_global = "0.1"
